6689653: JMapPerm fails with UseConcMarkSweepIncGC and compressed oops off

Added safe_object_iterate() for use by JMapPerm.

Reviewed-by: tonyp